# llm-appdev-tuto

./: README.md
coding-agent-cli-tuto/beam_cloud_deploy_llm/: download_model.py  pod.py
coding-agent-cli-tuto/drafts/: main_v2.py  main_v2_1.py  main_v2_1_1.py  main_v2_1_2.py  main_v2_1_2a.py  main_v2_2.py  qwen3_coder_30b_smoke_test_result_c840abc9ad614f50b8626457b85d6582.md  test_local_agent_sandbox.py
gradio-thinking-chatbot-tuto/: main.py  pyproject.toml  test_beh_gradio.py
old-llm-assistant-chatbot-tuto/src/infra/: web_search_rag.py
